# eml-pytorch

./: .gitignore  CHANGELOG.md  README.md  compare_activations.py  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  test.yml
docs/: Makefile  cpu_simd_research.md
docs/source/: changelog.rst  conf.py  eml_pytorch.rst  index.rst
eml_pytorch/: __init__.py  nn.py  ops.py  triton_kernel.py
examples/: benchmark_activations.py  benchmark_advantage_boundary.py  benchmark_compile.py  benchmark_triton.py  demo_tinynet.py  demo_training.py  symbolic_regression.py
tests/: test_amp_stability.py  test_nn.py  test_ops.py
