[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eml-pytorch"
dynamic = ["version"]
authors = [
    { name="UyNewNas", email="your.email@example.com" },
]
description = "Hardware-efficient Exp-Minus-Log (EML) operator for PyTorch"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/UyNewNas/eml-pytorch"
"Bug Tracker" = "https://github.com/UyNewNas/eml-pytorch/issues"
"Documentation" = "https://uynewnas.github.io/eml-pytorch/"

[tool.setuptools_scm]
write_to = "eml_pytorch/_version.py"
